syntax = "proto3";
package gRPCDemo.v1;
option csharp_namespace = "GWB.Example.gRPC";
import "google/protobuf/empty.proto";

service CountryService {
    rpc GetAll(google.protobuf.Empty) returns (CountryListReply) {}
    rpc Get(CountryIdRequest) returns (CountryReply) {}
    rpc Delete(CountryIdRequest) returns (google.protobuf.Empty) {}
    rpc Update(CountryUpdateRequest) returns (google.protobuf.Empty) {}
    rpc Create(CountryCreationRequest) returns (CountryCreationReply) {}
}

message CountryReply {
      string Id = 1;
      string Name = 2;
      string Description = 3;
      bytes Flag = 4;
      string CreateDate = 5;
      string UpdateDate = 6;
}

message CountryListReply {
      repeated CountryReply Countries = 1;
}

message CountryIdRequest {
      string Id = 1;
}
message CountryUpdateRequest {
      string Id = 1;
      string Description = 3;
      string UpdateDate = 6;
}
message CountryCreationRequest {
      string Name = 2;
      string Description = 3;
      bytes Flag = 4;
      string CreateDate = 5;
}

message CountryCreationReply {
      string Id = 1;
      string Name = 2;
}